appId: com.runningtests.app
---
- launchApp
- assertVisible: 'Hello'
- tapOn: 'Reveal next word'
- assertVisible: 'World'
